...
"next.upper" = "NEXT";
"confirm.upper" = "CONFIRM";
"continue" = "continue";
"save.upper" = "SAVE";
"cancel" = "Cancel";
"uploaded.progress" = "Uploaded: %d %%";
"public.key" = "Public Key";
"name.you" = "You";
"name.unknown" = "Unknown";
"name.unknown.initials" = "UK";
"today" = "Today";
"contact" = "Contact";
"profile" = "Profile";
"transactions" = "Transactions";
"profile.saved" = "Profile changes successfully saved";
"search" = "Search";
"submit" = "Submit";
"finish" = "finish";
"verify.upper" = "Verify";
...
"profile.mnemonic-generate-or-import-prompt" = "Would you like to generate a new seed phrase or import an existing one?";
"profile.mnemonic-generate-prompt" = "Generate";
"profile.mnemonic-import-prompt" = "Import";
"profile.finish-setup" = "Enter your nickname and an optional profile picture\nto finish setting up your Profile";
"profile.unsaved-changes" = "Unsaved changes";
"profile.unsaved-changes.alert" = "You have unsaved changes. Do you want to save them before proceeding?";
"profile.changes.save" = "Save changes";
"profile.changes.discard" = "Discard changes";

//PIN
"privacy.pin" = "Privacy PIN";
"standard.pin" = "Standard PIN";
"enter.pin.upper" = "ENTER PIN";
"choose.pin.upper" = "CHOOSE PIN";
"confirm.pin.upper" = "CONFIRM PIN";
"pin.doesnt.match" = "PIN doesn't match";
"pins.do.not.match" = "PINS do not match";
"current.pin" = "Old PIN";
"new.pin" = "New PIN";
"confirm.new.pin" = "Confirm new PIN";
"pin.changed" = "Your PIN has been updated";
"contact.pin.error" = "You can't use your main PIN as group PIN";
"set.privacy.pin" = "Set Privacy PIN";
"change.privacy.pin" = "Change Privacy PIN";
"privacy.pin.set" = "Your Privacy PIN has been set";
"privacy.pin.changed" = "Your Privacy PIN has been updated";
"pins.must.be.different" = "Your PIN and your Privacy PIN can not be the same";
"privacy.pin.tooltip" = "If the privacy setting is active, the contact will only show when the correct privacy PIN is used to log into Sphinx. You first need to set Privacy PIN from Profile to use this feature.";
"pin.change" = "Change PIN";
"confirm.pin.change" = "Are you sure you want to change your PIN?";
"confirm.privacy.pin.change" = "Are you sure you want to change your Privacy PIN?";

//HISTORY
"error.loading.transactions" = "There was an error loading transactions list. Please try again later.";
"loading.more.transactions" = "Loading more transactions...";
...
"logout.text" = "Are you sure you want to logout? All data and preferences will be deleted.";
"enter.code.placeholder" = "Enter code...";
"keychain.restore" = "Restore from Keychain";
"podcast.details" = "Episode Details and Chapters";
"my.lsats" = "My L402s";
"code.not.supported" = "Code not supported";
"enter.restore.pin" = "Enter Restore PIN";
"share.invite.code" = "Share Invite Code";
"open.conversation" = "Open a conversation to start using Sphinx";
"drag.attachment" = "Drag image or video in the chat view to send. Sending and Receiving payments are not supported in groups yet";
"audio.too.short" = "Audio too short";
"resume-restoring" = "Resuming Restore...";
"restoring-progress" = "Restoring:";
...
