...
                }
                window.close()
            }
        }
        
        let storyboard = NSStoryboard(name: NSStoryboard.Name("Main"), bundle: Bundle.main)
        let window = storyboard.instantiateController(withIdentifier: "MainWindow") as! NSWindowController
        window.contentViewController = vc
        window.window?.title = "Sphinx"
        window.window?.styleMask = hideBar ? [.titled, .resizable, .miniaturizable, .fullSizeContentView] : [.titled, .resizable, .miniaturizable]
        window.window?.minSize = windowState.minSize
        window.window?.titlebarAppearsTransparent = hideBar
        window.window?.titleVisibility = hideBar ? .hidden : .visible
        window.window?.setFrame(windowState.frame, display: true)
        window.window?.makeKey()
...
            newWindow.setAccessibilityEnabled(true)
            newWindow.setAccessibilityRole(.window)
            newWindow.setAccessibilityIdentifier("MainWindow")
        }
        window.window?.setAccessibilityChildren([view])
        view.setAccessibilityRole(.window)
        view.setAccessibilityIdentifier("MainView")
        // MARK: - End
        addStatusBarItem()
    }
    
    func getDashboardWindow() -> NSWindow? {
        for w in NSApplication.shared.windows {
...
