
/* Class = "NSTextFieldCell"; title = "User Name"; ObjectID = "3Qv-80-S8i"; */
"3Qv-80-S8i.title" = "User Name";

/* Class = "NSTextFieldCell"; title = "Default tip amount"; ObjectID = "Tci-hQ-YkV"; */
"Tci-hQ-YkV.title" = "Default tip amount";

/* Class = "NSTextFieldCell"; title = "Meeting Server"; ObjectID = "Uvb-lZ-Yc2"; */
"Uvb-lZ-Yc2.title" = "Meeting Server";

/* Class = "NSTextFieldCell"; title = "Address"; ObjectID = "gvM-01-89w"; */
"gvM-01-89w.title" = "Address";

"lhX-D8-z6l.title" = "Route Hint";

/* Class = "NSTextFieldCell"; title = "Share my profile photo\nwith contacts"; ObjectID = "pmw-w3-a0T"; */
"pmw-w3-a0T.title" = "Share my profile photo\nwith contacts";

"Ljn-Ti-k97.title" = "Track actions";

"RnC-xs-5Nh.title" = "Sync more devices";

"hwD-l5-buT.title" = "Backup your seed phrase";

/* Class = "NSButtonCell"; title = "SAVE CHANGES"; ObjectID = "qhk-bW-FZv"; */
"qhk-bW-FZv.title" = "Save changes";

/* Class = "NSButtonCell"; title = "Want to switch to a new device? Export Keys"; ObjectID = "tTV-fP-FrT"; */
"tTV-fP-FrT.title" = "Want to switch to a new device? Export Keys";

/* Class = "NSTextFieldCell"; title = "Server URL"; ObjectID = "wRd-MN-U8t"; */
"wRd-MN-U8t.title" = "Server URL";

"JQz-vv-8Tw.title" = "Change PIN";

"ISn-bT-TNB.title" = "Change Privacy PIN";

"GQo-KW-3sa.title" = "Setup Signer";

"lmK-Cf-g9b.title" = "Disconnect MQTT";

"2f0-yz-Rqi.title" = "Personal Graph URL";

"xzW-lH-kyo.title" = "Setup Personal Graph";
