...
        pinView.makeFieldFirstResponder()
    }
    
    // MARK: - For Testing Purpose
    func setViewForTesting() {
        let subViews = [pinView!, pinView.pinFieldView.textField!]
        let identifiers = ["PinView", "SecureFields"]
        configureVCForTesting(subViews, identifiers: identifiers, self.view)
    }
    // MARK: - End
}

